test/conformance/chainsaw/generate/clusterpolicy/cornercases/multi-rule-generate-accumulation/trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-rule-test-ns
  labels:
    test-generate: "multi-rule"
