test/conformance/chainsaw/generate/clusterpolicy/cornercases/multi-rule-generate-accumulation/app-config-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: app-config
  namespace: multi-rule-test-ns
data:
  APP_NAME: myapp
  APP_VERSION: "1.0.0"
  LOG_LEVEL: info
